[package]
name = "binary-classifier-rust"
version = "1.0.0"
edition = "2021"
description = "ONNX Binary Classifier for Sentiment Analysis - Rust Implementation"
authors = ["WhiteLightning AI"]
license = "MIT"
keywords = ["onnx", "machine-learning", "sentiment-analysis", "binary-classification", "rust"]

[[bin]]
name = "test_onnx_model"
path = "src/main.rs"

[dependencies]
ort = "1.16.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
anyhow = "1.0"
clap = { version = "4.0", features = ["derive"] }
colored = "2.0"
sysinfo = "0.29"
chrono = { version = "0.4", features = ["serde"] }
indicatif = "0.17"
num_cpus = "1.0"
thiserror = "1.0"
ndarray = "0.15"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"

[profile.dev]
opt-level = 1 