[package]
name = "multiclass-classifier-rust"
version = "1.0.0"
edition = "2021"
description = "ONNX Multiclass Classifier for News Category Classification - Rust Implementation"
authors = ["WhiteLightning AI"]
license = "MIT"
keywords = ["onnx", "machine-learning", "news-classification", "multiclass-classification", "rust"]

[[bin]]
name = "test_onnx_model"
path = "src/main.rs"

[dependencies]
ort = "2.0.0-rc.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
anyhow = "1.0"
clap = { version = "4.0", features = ["derive"] }
colored = "2.0"
sysinfo = "0.29"
chrono = { version = "0.4", features = ["serde"] }
indicatif = "0.17"
num_cpus = "1.0"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"

[profile.dev]
opt-level = 1 